[RED] Add more tests and update some tests for KodePromo service